--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,5 @@ jobs:
       - name: Test with pytest
         run: |
           python -m pip install .
-          python -m pytest
+          echo "running tests"
+          pytest tests
