--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
-      - name: Checks with pre-commit
-        uses: pre-commit/action@v2.0.3
+      # - name: Checks with pre-commit
+      #   uses: pre-commit/action@v2.0.3
 
       - name: Test with pytest
         run: |
